Fix footer text and logo alignment for mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,10 @@ a:hover {
   width: 95%;
 }
 
+.footer-text {
+  font-size: 0.8rem;
+}
+
 @media only screen and (min-width: 678px) {
   .make-navbar-big {
     position: inherit;
@@ -239,5 +243,9 @@ a:hover {
   .about-logo-img {
     padding: 20px 50px;
     width: 50%;
+  }
+
+  .footer-text {
+    font-size: 1rem;
   }
 }
